style: fix banner overlapping with links
GH-86

--- a/styles/Articles.module.css
+++ b/styles/Articles.module.css
@@ -56,12 +56,14 @@
   transform: translateY(-2rem);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .banner {
     transform: translateY(0);
     margin-bottom: 1rem;
   }
+}
 
+@media (max-width: 768px) {
   .description {
     transform: translateY(0);
   }
